feat: add linear regression module
- Add linearRegression() function for simple linear regression
- Returns slope, intercept, R², and predict function
- Uses least squares method
- Update README with API documentation and examples
- Add tests for linear regression
- Bump version to 1.3.0
- Add regression-related keywords

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mikyviz/stat-kit",
-  "version": "1.2.0",
-  "description": "Lightweight statistics package: mean, median, standard deviation, correlation, z-table, outliers detection, and more",
+  "version": "1.3.0",
+  "description": "Lightweight statistics package: mean, median, standard deviation, correlation, linear regression, z-table, outliers detection, and more",
   "main": "index.js",
   "keywords": [
     "statistics",
@@ -23,7 +23,11 @@
     "confidence-interval",
     "empirical-rule",
     "quantile",
-    "sigma"
+    "sigma",
+    "linear-regression",
+    "regression",
+    "least-squares",
+    "prediction"
   ],
   "author": "Michael David Vizenovsky",
   "license": "MIT",
